css style study

--- a/1.html
+++ b/1.html
@@ -3,16 +3,20 @@
 	<head>
 		<meta charset="utf-8">
 		<title> HTML 테스트 입니다. </title>
+		<link rel="stylesheet" href="./style.css">
 	</head>
 	<body>
 		<h1><a href="./index.html">WEB</a></h1>
-		<ol>
-			<li><a href="./1.html">HTML</a></li>
-			<li><a href="./2.html">CSS</a></li>
-			<li><a href="./3.html">JavaScript</a></li>
-		</ol>
-		<h2> HTML 이란 </h2>
-		<p style="margin-left:20;"> <a href="https://www.w3.org/TR/html5" target='_blank' title="html5 specification">하이퍼택스트 마크업 랭귀지(HTML)</a>는 <br><strong>웹 페이지와 웹 어플리케이션을 <u>생성</u></strong>하기<br> 위한 마크업 언어이다.</p>
-		<img src="./mister.jpg" width="100%"> 미스터 </img>
+		<div id="grid">
+			<ol>
+				<li><a href="./1.html">HTML</a></li>
+				<li><a href="./2.html">CSS</a></li>
+				<li><a href="./3.html">JavaScript</a></li>
+			</ol>
+			<div id="article">
+				<h2> HTML 이란 </h2>
+				<p> <a href="https://www.w3.org/TR/html5" target='_blank' title="html5 specification">하이퍼택스트 마크업 랭귀지(HTML)</a>는 <br><strong>웹 페이지와 웹 어플리케이션을 <u>생성</u></strong>하기<br> 위한 마크업 언어이다.</p>
+			</div>
+		</div>
 	</body>
 </html>
