--- a/3.html
+++ b/3.html
@@ -3,10 +3,13 @@
 	<head>
 		<meta charset="utf-8">
 		<title> HTML 테스트 입니다. </title>
-		<link rel="stylesheet" href="./style.css">
+	<!--	<link rel="stylesheet" href="./style.css"> -->
+		<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		<script src="./color.js"> </script>
 	</head>
 	<body>
 		<h1><a href="./index.html">WEB</a></h1>
+		<input type="button" value='night' onclick="togleEvent(this);">
 		<div id="grid">
 			<ol>
 				<li><a href="./1.html">HTML</a></li>
@@ -16,8 +19,11 @@
 			<div id="article">
 				<h2> JavaScript 란 </h2>
 				<p style="margin-left:20;">
-					자바 스크립트 ( / dʒ ɑː V ə ˌ S K R의 ɪ의 P의 t / ), 종종 약칭 JS는 , A는 하이 레벨 , 해석 스크립팅 언어 받는 따르는 대한 ECMAScript 사양. JavaScript에는 중괄호 구문 , 동적 입력 , 프로토 타입 기반 객체 지향 및 일류 함수가 있습니다.</p>
+					자바 스크립트 ( / dʒ ɑː V ə ˌ S K R의 ɪ의 P의 t / ), 종종 약칭 JS는 , A는 하이 레벨 ,
+					해석 스크립팅 언어 받는 따르는 대한 ECMAScript 사양. JavaScript에는 중괄호 구문 , 동적 입력 ,
+					프로토 타입 기반 객체 지향 및 일류 함수가 있습니다.</p>
 			</div>
 		</div>
+		<input type="button" value='night' onclick="togleEvent(this)">
 	</body>
 </html>
